<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="b_txt_spotify">Spotify Streamer</string>
    <string name="b_txt_football">Football Score!</string>
    <string name="b_txt_library">Library</string>
    <string name="b_txt_build">Build It Bigger</string>
    <string name="b_txt_xyz">XYZ Reader</string>
    <string name="b_txt_capstone">Capstone: My Own App</string>
</resources>
